--- a/JSONFile/Base.lproj/MainMenu.xib
+++ b/JSONFile/Base.lproj/MainMenu.xib
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="6245" systemVersion="14A389" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
     <dependencies>
-        <deployment defaultVersion="1080" identifier="macosx"/>
         <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="6245"/>
     </dependencies>
     <objects>
@@ -12,7 +11,7 @@
         </customObject>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <window title="Unicode转码" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" oneShot="NO" releasedWhenClosed="NO" showsToolbarButton="NO" visibleAtLaunch="NO" animationBehavior="default" id="pgO-py-Yz2">
-            <windowStyleMask key="styleMask" titled="YES" closable="YES" miniaturizable="YES" resizable="YES"/>
+            <windowStyleMask key="styleMask" titled="YES" closable="YES" miniaturizable="YES" resizable="YES" texturedBackground="YES"/>
             <windowCollectionBehavior key="collectionBehavior" fullScreenPrimary="YES"/>
             <windowPositionMask key="initialPositionMask" leftStrut="YES" rightStrut="YES" topStrut="YES" bottomStrut="YES"/>
             <rect key="contentRect" x="447" y="279" width="400" height="350"/>
@@ -98,6 +97,9 @@
         <customObject id="Voe-Tx-rLC" customClass="MAXAppDelegate">
             <connections>
                 <outlet property="menu" destination="6Kf-Wy-AUB" id="WrQ-fe-oNe"/>
+                <outlet property="windowConvert" destination="pgO-py-Yz2" id="GwK-do-V5y"/>
+                <outlet property="windowJSON" destination="14o-s9-ULE" id="jig-KO-Rpc"/>
+                <outlet property="windowRequest" destination="YEg-nQ-MIk" id="6Gl-tB-CIQ"/>
             </connections>
         </customObject>
         <customObject id="vpA-p6-yr5" customClass="MAXRequestController">
@@ -110,7 +112,7 @@
             </connections>
         </customObject>
         <window title="JSONFormat" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" oneShot="NO" releasedWhenClosed="NO" showsToolbarButton="NO" visibleAtLaunch="NO" animationBehavior="default" id="14o-s9-ULE">
-            <windowStyleMask key="styleMask" titled="YES" closable="YES" miniaturizable="YES" resizable="YES"/>
+            <windowStyleMask key="styleMask" titled="YES" closable="YES" miniaturizable="YES" resizable="YES" texturedBackground="YES"/>
             <windowCollectionBehavior key="collectionBehavior" fullScreenPrimary="YES"/>
             <windowPositionMask key="initialPositionMask" leftStrut="YES" rightStrut="YES" topStrut="YES" bottomStrut="YES"/>
             <rect key="contentRect" x="324" y="219" width="626" height="466"/>
@@ -185,7 +187,7 @@
             <point key="canvasLocation" x="384" y="395"/>
         </window>
         <window title="接口测试" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" oneShot="NO" releasedWhenClosed="NO" showsToolbarButton="NO" visibleAtLaunch="NO" animationBehavior="default" id="YEg-nQ-MIk">
-            <windowStyleMask key="styleMask" titled="YES" closable="YES" miniaturizable="YES" resizable="YES"/>
+            <windowStyleMask key="styleMask" titled="YES" closable="YES" miniaturizable="YES" resizable="YES" texturedBackground="YES"/>
             <windowCollectionBehavior key="collectionBehavior" fullScreenPrimary="YES"/>
             <windowPositionMask key="initialPositionMask" leftStrut="YES" rightStrut="YES" topStrut="YES" bottomStrut="YES"/>
             <rect key="contentRect" x="379" y="209" width="626" height="491"/>
@@ -348,7 +350,7 @@
                     </textField>
                 </subviews>
             </view>
-            <point key="canvasLocation" x="-258" y="854.5"/>
+            <point key="canvasLocation" x="434" y="746.5"/>
         </window>
         <customObject id="SJB-pU-mH4" customClass="MAXPluginController">
             <connections>
